<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivPoster"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_poster_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/rounded12"
            tools:src="@tools:sample/avatars" />

        <View
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/black_transparent"
            app:layout_constraintBottom_toBottomOf="@id/ivPoster"
            app:layout_constraintEnd_toEndOf="@id/ivPoster"
            app:layout_constraintStart_toStartOf="@id/ivPoster" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btnFav"
            app:shapeAppearanceOverlay="@style/rounded18"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:scaleType="fitCenter"
            android:layout_margin="12dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_fav_outline"
            app:layout_constraintBottom_toBottomOf="@id/ivPoster"
            app:layout_constraintEnd_toEndOf="@id/ivPoster" />

        <LinearLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ivPoster">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Shang-Chi and the Legend of the Ten Rings" />

            <TextView
                android:id="@+id/tvRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:drawablePadding="2dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_clock"
                tools:text="March 27, 2020" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="0"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTextRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    tools:text="@string/rating_value" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTop"
            tools:text="@tools:sample/lorem/random" />

        <ProgressBar
            android:id="@+id/progressDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>