<resources>
    <string name="app_name">Muviku</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="rating">Rating :</string>
    <string name="rating_value">%1s / 10 from %2s Users</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="icon_share">Icon Share</string>
    <string name="share_text">Segera tonton film terbaru berikut! *%1s* akan tayang pada *%2s*  </string>
    <string name="image_item_home_content">image item home content</string>
    <string name="image_poster_detail">image poster detail</string>
    <string name="image_first_screen">image first screen</string>
    <string name="image_dialog_detail">image dialog detail</string>
    <string name="share_now">Bagikan aplikasi ini sekarang</string>
    <string name="icon_favorite">Icon Favorite</string>
    <string name="image_back">Image Back</string>
    <string name="dont_have_list">You don\'t have list of favorite</string>
    <string name="no_favorites_yet">No Favorites Yet</string>
    <string name="search">Search</string>
</resources>