<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ivShare"
        android:contentDescription="@string/icon_share"
        android:icon="@drawable/ic_share"
        android:title="@string/icon_share"
        app:showAsAction="always" />
</menu>